--- a/api/package.json
+++ b/api/package.json
@@ -14,18 +14,27 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.14.0",
+    "bcryptjs": "^3.0.2",
+    "connect-redis": "^9.0.0",
     "drizzle-orm": "^0.44.4",
     "express": "^5.1.0",
+    "express-session": "^1.18.2",
+    "ioredis": "^5.7.0",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.3",
     "postgres": "^3.4.7",
-    "prisma-zod-generator": "^1.16.0",
-    "zod": "^4.0.17"
+    "prisma-zod-generator": "^1.16.2",
+    "zod": "^4.1.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/express": "^5.0.3",
+    "@types/express-session": "^1.18.1",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/pg": "^8.15.5",
     "drizzle-kit": "^0.31.4",
     "prisma": "^6.14.0",
+    "prisma-generator-zod": "^1.0.0",
     "tsx": "^4.20.4",
     "typescript": "^5.9.2"
   }
