--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node --import=tsx --watch --env-file=.env src/index.tsx",
+    "dev": "node --import=tsx --watch --env-file=.env src/index.ts",
     "build": "tsc",
     "generate": "npx prisma generate"
   },
@@ -13,9 +13,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@prisma/client": "^6.14.0",
+    "@prisma/client": "^6.15.0",
     "bcryptjs": "^3.0.2",
     "connect-redis": "^9.0.0",
+    "cors": "^2.8.5",
     "drizzle-orm": "^0.44.4",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
@@ -28,6 +29,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/express-session": "^1.18.1",
     "@types/jsonwebtoken": "^9.0.10",
