--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -6,6 +6,7 @@
         "moduleResolution": "node",
         "allowSyntheticDefaultImports": true,
         "outDir": "./dist",
+        "rootDir": "src",
         "esModuleInterop": true,
         "forceConsistentCasingInFileNames": true,
         "strict": true,
